revert: Revert "fix: Align disabled select controls styles (#3638)" (#3656)

--- a/src/internal/styles/forms/mixins.scss
+++ b/src/internal/styles/forms/mixins.scss
@@ -132,6 +132,14 @@
   cursor: auto;
 }
 
+@mixin button-trigger-disabled-element {
+  background-color: awsui.$color-background-input-disabled;
+  border-block: awsui.$border-width-token solid awsui.$color-border-input-disabled;
+  border-inline: awsui.$border-width-token solid awsui.$color-border-input-disabled;
+  color: awsui.$color-text-input-disabled;
+  cursor: auto;
+}
+
 @mixin form-readonly-element {
   background-color: awsui.$color-background-input-default;
   border-block: awsui.$border-width-field solid awsui.$color-border-input-disabled;
